# lean-rgc-automation-stack

./: .gitignore  LEAN_RGC_V11_NOTES.md  LEAN_RGC_V13_QGEN_LOOP_NOTES.md  LEAN_RGC_V14_QGEN_CLOSURE_NOTES.md  LEAN_RGC_V17_QGEN_REALIZED_NOTES.md  LEAN_RGC_V20_ACTION_GEOMETRY_NOTES.md  LEAN_RGC_V21_LEAN_SERVER_ADAPTER_NOTES.md  LEAN_RGC_V21_LEAN_SERVER_NOTES.md  LEAN_RGC_V24_AUDIT_DB_NOTES.md  LEAN_RGC_V26_QUOTIENT_COORDINATE_LOOP_NOTES.md  LEAN_RGC_V28_KERNEL_STATE_NOTES.md  LEAN_RGC_V2_NOTES.md  LEAN_RGC_V32_CONTEXTUAL_PROBES_NOTES.md  LEAN_RGC_V3_NOTES.md  LEAN_RGC_V40_DEFECT_ONTOLOGY_LIFECYCLE_NOTES.md  LEAN_RGC_V42_ARITHMETIC_TEACHER_KERNEL_AUDIT_NOTES.md  LEAN_RGC_V45_GAMMA_AWARE_ACTION_GEOMETRY_NOTES.md  LEAN_RGC_V50_PREMISE_CONTEXTUAL_QUOTIENT_NOTES.md  LEAN_RGC_V6_NOTES.md  LEAN_RGC_V9_NOTES.md  README.md  pyproject.toml
docs/: architecture.md  cli.md  data_model.md  lean_runtime_boundary.md  migration_status.md  testing.md
examples/: core_tactics.jsonl  core_theorems.jsonl  minimal_theorems.jsonl  tactic_templates.jsonl
lean_project_template/: RGCLean.lean  lake-manifest.json  lakefile.lean
lean_rgc/: __init__.py  acceptance_report.py  action_analysis.py  action_geometry.py  action_geometry_loop.py  action_quarantine.py  active_audit_scheduler.py  active_scheduler.py  arithmetic_teacher.py  arithmetic_teacher_cocycle.py  arithmetic_teacher_kernel_audit.py  audit_db.py  audit_env_profile.py  audit_job_queue.py  audit_pruning.py  audit_result_cache.py  audit_scheduler.py  audit_staging.py  auto_defects.py  batch.py  bivariate_contextual_quotient.py  bulk_executor.py  cache.py  candidate_acceptance.py  candidates.py  carrier.py  carrier_acceptance.py  carrier_exposure.py  carrier_normalizer.py  carrier_patch_audit.py  carrier_promotion.py  carrier_quotient.py  cli.py  cli_audit.py  cli_common.py  cli_crg.py  cli_data.py  cli_dost.py  cli_experiment.py  cli_lean.py  (+101 more)
notebooks/: lean_rgc_quickstart.ipynb  lean_rgc_v02_quickstart.ipynb  lean_rgc_v2_quickstart.ipynb  lean_rgc_v52_colab_setup_bivariate_experiment.ipynb  lean_rgc_v53_colab_bivariate_face_taxonomy.ipynb  lean_rgc_v54_colab_minif2f_experiment.ipynb  (+1 more)
(+521 files in other folders)
